Start cleaning up some nullability stuff with jspecify